# ragcsv

./: .gitignore  README.md  main.py  pyproject.toml
data/: booking_2025-08-07_2025-08-08.html  booking_availability.csv
notebook/: LCEL.ipynb  csv.ipynb  section.ipynb
src/: doc_parser.py
