[project]
name = "ragcsv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.4",
    "pandas>=2.3.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
